fix(html and css): client name alignment

--- a/Internal-CRM/styles.css
+++ b/Internal-CRM/styles.css
@@ -665,7 +665,7 @@ h1 {
 }
 
 .projects-table th:nth-child(n+3):nth-child(-n+6) {
-  width: 250px;
+  min-width: 250px;
 }
 .projects-table th:nth-child(2) {
   width: 150px;
@@ -892,6 +892,17 @@ h1 {
   width: 24px;
   height: 24px;
   margin-right: 0.5rem;
+}
+.clients{
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: center;
+}
+.client-name{
+ display: inline-flex;
+align-items: center;
+margin-bottom: 5px;
 }
 
 .project-popup-header .label-active,
